--- a/templates/user/edit_info.html
+++ b/templates/user/edit_info.html
@@ -3,13 +3,10 @@
 <div class="container my-3">
     <div class="row">
         <div class="col-4">
-            <h4>로그인</h4>
-        </div>
-        <div class="col-8 text-right">
-            <span>또는 <a href="{% url 'user:signup' %}">계정을 만드세요.</a></span>
+            <h4>개인정보 수정</h4>
         </div>
     </div>
-    <form method="post" class="post-form" action="{% url 'user:login' %}">
+    <!--<form method="post" class="post-form" action="{% url 'user:login' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
         <div class="form-group">
@@ -23,6 +20,6 @@
                    value="{{ form.password.value|default_if_none:'' }}">
         </div>
         <button type="submit" class="btn btn-primary">로그인</button>
-    </form>
+    </form>-->
 </div>
 {% endblock %}
