--- a/templates/user/edit_info.html
+++ b/templates/user/edit_info.html
@@ -6,20 +6,11 @@
             <h4>개인정보 수정</h4>
         </div>
     </div>
-    <!--<form method="post" class="post-form" action="{% url 'user:login' %}">
+    <form method="post" class="post-form" action="{% url 'user:edit_info' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        <div class="form-group">
-            <label for="username">아이디</label>
-            <input type="text" class="form-control" name="username"" id="username"
-                   value="{{ form.username.value|default_if_none:'' }}">
-        </div>
-        <div class="form-group">
-            <label for="password">비밀번호</label>
-            <input type="password" class="form-control" name="password" id="password"
-                   value="{{ form.password.value|default_if_none:'' }}">
-        </div>
-        <button type="submit" class="btn btn-primary">로그인</button>
-    </form>-->
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">정보 수정</button>
+    </form>
 </div>
 {% endblock %}
