--- a/templates/book/book_create.html
+++ b/templates/book/book_create.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="row">
-    <a class="book_create_intro" href="{% url 'book:index' %}"> 책 등록하기 </a>
+    <a class="book_create_intro" href="{% url 'book:index' %}"> 전공책 등록하기 </a>
 
     <div class="col">
 
