--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,28 +1,23 @@
 {% extends "base.html" %}
+
 {% block content %}
-<div class="container my-3">
-    <div class="row">
-        <div class="col-4">
-            <h4>로그인</h4>
-        </div>
-        <div class="col-8 text-right">
-            <span>또는 <a href="{% url 'user:signup' %}">계정을 만드세요.</a></span>
-        </div>
-    </div>
-    <form method="post" class="post-form" action="{% url 'user:login' %}">
+<div class="login">
+    <div class="heading"><h1>로그인</h1></div>
+    <form method="post" action="{% url 'user:login' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        <div class="form-group">
-            <label for="username">아이디</label>
-            <input type="text" class="form-control" name="username"" id="username"
-                   value="{{ form.username.value|default_if_none:'' }}">
+        <div class="id">
+            <input type="text">
         </div>
-        <div class="form-group">
-            <label for="password">비밀번호</label>
-            <input type="password" class="form-control" name="password" id="password"
-                   value="{{ form.password.value|default_if_none:'' }}">
+        <div class="pwd">
+            <input type="text">
         </div>
-        <button type="submit" class="btn btn-primary">로그인</button>
+        <div class="button">
+            <button type="submit">로그인</button>
+        </div>
     </form>
+    <div class="signup">
+        <span>아직 회원이 아니라면<a href="{% url 'user:signup' %}">가입하기</a></span>
+    </div>
 </div>
 {% endblock %}
