--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="BooKU">
+    <meta name="keywords" content="BooKU">
 
     <title>BooKU</title>
     <!--reset CSS-->
@@ -14,8 +15,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     <!-- custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+    {% block styles %}
+    {% endblock %}
 </head>
 
 <body>
