--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
         <div class="content">
             <p>서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 서비스에 대한 간단한 설명과 소개 </p>
         </div>
+        <div class="explore">
+            <button>Explore</button>
+        </div>
     </section>
     <section class="section section-b">
         <svg class="img" width="750" height="662" viewBox="0 0 750 662" fill="none" xmlns="http://www.w3.org/2000/svg"
