--- a/static/css/index.css
+++ b/static/css/index.css
@@ -51,3 +51,23 @@ h1{
 .img{
     display: inline-block;
 }
+
+.explore{
+    margin-top: 20px;
+}
+
+button{
+    height: 65px;
+    width: 225px;
+    border-radius: 8px;
+    background-color: #FB8F1D;
+    border:none;
+
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 65px;
+    text-align: center;
+    color:white;
+}
