--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,6 +1,162 @@
-.signup{
-    width:500px;
-    margin:auto;
-    margin-top:100px;
-    background-color: grey;
+.content{
+    width:750px;
+    margin:0 auto;
+    margin-top:50px;
+}
+
+.content h2{
+    margin-bottom: 50px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 44px;
+
+    color: #4A4A4A;
+}
+
+.form-group .full{
+    width: 100%;
+    height: 50px;
+    background: #F2F2F2;
+    border-radius: 10px;
+}
+
+.university{
+    overflow:hidden;
+}
+.major_col1{
+    display: inline-block;
+    float:left;
+    width:375px;
+}
+
+.major_col2{
+    display: inline-block;
+    float:right;
+    width:375px;
+}
+
+.university select{
+    width: 360px;
+    height: 55px;
+
+    border: 1px solid #AFB0B9;
+    box-sizing: border-box;
+    border-radius: 6px;
+
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 32px;
+    /* or 160% */
+
+
+    color: #4A4C53;
+}
+
+
+.gender{
+    width:300px;
+    float: left;
+    
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+
+    color: #5C5C5C;
+}
+
+.date_of_birth{
+    width:300px;
+    float:right;
+}
+
+.g_dob{
+    overflow: hidden;
+}
+
+form button{
+    display:block;
+    margin: 50px auto;
+    width: 306px;
+    height: 55px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    align-items: center;
+    text-align: center;
+
+    color: #FFFFFF;
+
+    background: #FB8F1D;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    border:none;
+}
+
+
+label{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+
+    color: #5C5C5C;
+}
+
+input:focus{
+    outline: none;
+}
+
+input{
+    border:none;
+}
+
+.major_col1 select{
+    width:300px;
+}
+
+.first_major{
+    border: 1px solid #FC8C15;
+}
+
+.major_col1>p{
+    margin:3px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+
+    color: #FC8C15;
+}
+
+.email_description{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1em;
+}
+
+.gender>label{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1em;
+    color: #5C5C5C;
+}
+
+form input{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    padding-left: 20px;
 }
