--- a/templates/allbook/allbook_create.html
+++ b/templates/allbook/allbook_create.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="확인" class="btn_book_upload">
-            <button type="button" onclick="location.href='{% url 'allbook:index' %}'" class="btn_book_unload" >취소</button>
+            <!-- <button type="button" onclick="location.href='{% url 'allbook:index' %}'" class="btn_book_unload" >취소</button> -->
         </form>
   </div>
 
