--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
     <div class="nav-items">
         <ul class="nav-ul">
             <li class="nav-item not_btn">
-                <a class="nav-link" href="{% url 'book:index' %">전공책 거래하기</a>
+                <a class="nav-link" href="{% url 'book/index' %">전공책 거래하기</a>
             </li>
             <li class="nav-item not_btn">
                 <a class="nav-link" href="">공지사항</a>
