--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -10,8 +10,8 @@
     <form method="post" action="{% url 'user:login' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        <div class="id">
-            <input type="text" placeholder="아이디" name="username" id="username" value="{{form.username.value|default_if_none:''}}">
+        <div class="email">
+            <input type="text" placeholder="학교 이메일" name="email" id="email" value="{{form.email.value|default_if_none:''}}">
         </div>
         <div class="pwd">
             <input type="password" placeholder=" 비밀번호" name="password" id="password"  value="{{form.password.value|default_if_none:''}}">
@@ -21,7 +21,7 @@
         </div>
     </form>
     <div class="ifnot">
-        <span>아직 회원이 아니라면? <a class="signup" href="{% url 'user:signup' %}">가입하기</a></span>
+        <span>아직 회원이 아니라면? <a class="signup" href="{% url 'user:signup' %}">가입하기</a> | <a href="{% url 'user:find_pwd' %}">비밀번호 찾기</a></span>
     </div>
 </div>
 {% endblock %}
