--- a/static/css/change_major.css
+++ b/static/css/change_major.css
@@ -1,19 +1,57 @@
 .content{
-    width:750px;
-    margin:0 auto;
-    margin-top:50px;
+    width:1011px;
+    margin: 50px auto;
 }
 
-.content h2{
-    margin-bottom: 50px;
+h2{
+    margin-left:100px;
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
     font-size: 36px;
-    line-height: 44px;
-
     color: #4A4A4A;
 }
+h2>hr{
+    margin-left:0;
+    width: 40px;
+    height: 2.5px;
+    background: #4A4A4A;
+    border-radius: 4px;
+}
+
+.my_page_header{
+    margin: 50px 0;
+}
+.my_page_header a{
+    width:334px;
+    display: inline-block;
+    text-align: center;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    text-decoration: none;
+    color: #757575;
+}
+
+#active2{
+    font-weight:600;
+
+}
+#active2>hr{
+    height: 2.5px;
+    background-color: #757575;
+}
+
+form p{
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+
+    color: #515050;
+}
+
 
 .form-group .full{
     width: 100%;
@@ -22,13 +60,11 @@
     border-radius: 10px;
 }
 
-.university{
-    overflow:hidden;
-}
 .major_col1{
     display: inline-block;
     float:left;
     width:375px;
+    margin-right:20px;
 }
 
 .major_col2{
@@ -37,10 +73,9 @@
     width:375px;
 }
 
-.university select{
+select{
     width: 360px;
     height: 50px;
-
     border: 1px solid #AFB0B9;
     box-sizing: border-box;
     border-radius: 6px;
@@ -55,46 +90,7 @@
 
     color: #4A4C53;
 }
-.gender>p{
-    margin-bottom:7px;
-}
-.gender>div{
-    width: 100px;
-    height: 50px;
-    background: #F2F2F2;
-    border-radius: 10px;
-    line-height: 50px;
-}
-.date_of_birth input{
-    width: 100%;
-    height: 50px;
-    background: #F2F2F2;
-    border-radius: 10px;
-    line-height: 50px;
-}
 
-
-.gender{
-    width:300px;
-    float: left;
-    
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 27px;
-
-    color: #5C5C5C;
-}
-
-.date_of_birth{
-    width:300px;
-    float:right;
-}
-
-.g_dob{
-    overflow: hidden;
-}
 
 form button{
     display:block;
@@ -135,9 +131,6 @@ input{
     border:none;
 }
 
-.major_col1 select{
-    width:300px;
-}
 
 .first_major{
     border: 1px solid #FC8C15;
@@ -154,13 +147,6 @@ input{
     color: #FC8C15;
 }
 
-.email_description{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1em;
-}
-
 
 form input{
     font-family: Inter;
@@ -172,12 +158,7 @@ form input{
 }
 
 .major{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 27px;
-    
-    color: #5C5C5C;
+    overflow:hidden;
+    width:fit-content;
+    margin:0 auto;
 }
-
