--- a/templates/user/change_major.html
+++ b/templates/user/change_major.html
@@ -1,54 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/signup.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/change_major.css' %}">
 {% endblock %}
 {% block content %}
 
 <div class="content">
-    <h2>회원가입</h2>
-    <form method="POST" action="{% url 'user:signup' %}">
+    {% include 'user/my_page_header.html'%}
+    <form method="POST" action="{% url 'user:change_major' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        <div class="form-group">
-            <label for="username">아이디</label><br>
-            <input type="text" class="full" name="username" id="username"
-                value="{{ form.username.value|default_if_none:'' }}">
-        </div>
-        <div class="form-group">
-            <label for="password1">비밀번호</label><br>
-            <input type="password" class="full" name="password1" id="password1"
-                value="{{ form.password1.value|default_if_none:'' }}">
-        </div>
-        <div class="form-group">
-            <label for="password2">비밀번호 확인</label><br>
-            <input type="password" class="full" name="password2" id="password2"
-                value="{{ form.password2.value|default_if_none:'' }}">
-        </div>
-        <div class="form-group">
-            <label for="email">이메일</label><br>
-            <input type="text" class="full" name="email" id="email" value="{{ form.email.value|default_if_none:'' }}">
-            <p class="email_description">건국대학교 이메일을 입력해주세요. 인증메일이 발송됩니다.</p>
-        </div>
-        <div class="form-group g_dob">
-            <div class="gender">
-                <p>성별</p>
-                <div>
-                    <span>남</span>
-                    <input type="radio" name="gender" id="gender" value="male">
-                    <span>여</span>
-                    <input type="radio" name="gender" id="gender" value="female">
-                </div>
-            </div>
-            <div class="date_of_birth">
-                <label for="date_of_birth">생년월일</label><br>
-                <input type="date" name="date_of_birth" id="date_of_birth"
-                    value="{{form.date_of_birth.value|default_if_none:''}}">
-            </div>
-        </div>
-        <div class="university">
-            <div class="major">학과선택</div>
-            <hr>
+        <div class="major">
+            <p>※학과는 한번 선택 후 4개월 동안 변경 불가합니다.</p>
             <div class="major_col1 form-group">
                 <select class="first_major" name="first_major" id="first_major">
                     <option value="" disabled selected hidden>원전공</option>
@@ -139,8 +102,6 @@
                     </optgroup>
                 </select>
                 <p> 필수 입력사항입니다.</p>
-                <!-- <input list="majors" class="" name="first_major" id="first_major" placeholder="원전공"
-                    value="{{ form.first_major.value|default_if_none:'' }}"> -->
             </div>
             <div class="major_col2">
                 <div class="major_row form-group">
@@ -327,7 +288,7 @@
                 </div>
             </div>
         </div>
-        <button type="submit">가입하기</button>
+        <button type="submit">변경하기</button>
     </form>
 </div>
 {% endblock %}
