--- a/templates/user/change_pwd.html
+++ b/templates/user/change_pwd.html
@@ -3,15 +3,14 @@
 <div class="container my-3">
     <div class="row">
         <div class="col-4">
-            <h4>아이디 찾기</h4>
+            <h4>비밀번호 변경</h4>
         </div>
     </div>
-    <form method="post" class="post-form" action="{% url 'user:find_id' %}">
+    <form method="post" class="post-form" action="{% url 'user:change_pwd' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">아이디 찾기</button>
+        <button type="submit" class="btn btn-primary">변경</button>
     </form>
 </div>
-
 {% endblock %}
