--- a/templates/user/find_pwd.html
+++ b/templates/user/find_pwd.html
@@ -1,15 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container my-3">
-    <div class="row">
-        <div class="col-4">
-            <h4>비밀번호 찾기</h4>
-        </div>
-    </div>
+    <h2>비밀번호 찾기</h2>
+    <p>가입할 때 사용하신 이메일을 입력하시면 비밀번호 변경 링크를 전송해드립니다.</p>
     <form method="post" class="post-form" action="{% url 'user:find_pwd' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        {{ form.as_p }}
+        
         <button type="submit" class="btn btn-primary">비밀번호 찾기</button>
     </form>
 </div>
