--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -14,6 +14,14 @@
 
     color: #4A4A4A;
 }
+h2>hr{
+    margin-left:0;
+    width: 40px;
+    height: 2.5px;
+    background: #4A4A4A;
+    border-radius: 4px;
+}
+
 
 .form-group .full{
     width: 100%;
@@ -41,7 +49,6 @@
     width: 360px;
     height: 50px;
 
-    border: 1px solid #AFB0B9;
     box-sizing: border-box;
     border-radius: 6px;
 
@@ -136,7 +143,7 @@ input{
 }
 
 .major_col1 select{
-    width:300px;
+    width:360px;
 }
 
 .first_major{
