--- a/templates/user/change_username.html
+++ b/templates/user/change_username.html
@@ -6,16 +6,11 @@
 {% block content %}
 <div class="content">
     {% include 'user/my_page_header.html'%}
-    
-    <form method="post" class="post-form" action="{% url 'user:change_pwd' %}">
+    <form method="post" class="post-form" action="{% url 'user:change_username' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        <label for="old_password">기존 비밀번호</label>
-        <input type="password" name="old_password" id="old_password">
-        <label for="old_password">새 비밀번호</label>
-        <input type="password" name="new_password1" id="new_password1">
-        <label for="old_password">새 비밀번호 확인</label>
-        <input type="password" name="new_password2" id="new_password2">
+        <label for="username">닉네임</label>
+        <input type="text" name="username" id="username" value = "{{form.username.value}}">
         <button type="submit" class="">변경하기</button>
     </form>
 </div>
