--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -6,12 +6,12 @@
 {% block content %}
 
 <div class="content">
-    <h2>회원가입</h2>
+    <h2>회원가입<hr></h2>
     <form method="POST" action="{% url 'user:signup' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
         <div class="form-group">
-            <label for="username">아이디</label><br>
+            <label for="username">닉네임</label><br>
             <input type="text" class="full" name="username" id="username"
                 value="{{ form.username.value|default_if_none:'' }}">
         </div>
@@ -34,10 +34,10 @@
             <div class="gender">
                 <p>성별</p>
                 <div>
-                    <span>남</span>
-                    <input type="radio" name="gender" id="gender" value="male">
-                    <span>여</span>
-                    <input type="radio" name="gender" id="gender" value="female">
+                    <label for="male">남</label>
+                    <input type="radio" name="gender" id="male" value="male">
+                    <label for="female">여</label>
+                    <input type="radio" name="gender" id="female" value="female">
                 </div>
             </div>
             <div class="date_of_birth">
