add major list filtering

--- a/templates/book/book_detail.html
+++ b/templates/book/book_detail.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <img src=" {{ object.image.url }}" class="book_detail_image" alt="..." >
+    <img src=" {{ object.image.url }}" class="book_detail_image" alt="..." height="280" width="180">
       <div class="card-body">
         <h5 class="book_detail_author">{{ object.author }}</h5>
         <hr class="book_detail_first_line">
