--- a/templates/book/book_update.html
+++ b/templates/book/book_update.html
@@ -147,6 +147,7 @@
             {% endif %}
         {% endfor %}
         <input type="submit" value="완료">
+            <div><button onclick ="location.href='{% url 'book:index' %}'" class="btn_book_delete">취소</button></div>
         </div>
     </form>
   </div>
