--- a/templates/book/book_create.html
+++ b/templates/book/book_create.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+{% block styles %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/change_account_info.css' %}">
+{% endblock %}
+{% block content %}
 <script language="JavaScript">
         function getSelectValue(frm)
         {
@@ -82,5 +81,4 @@
 
 </div>
 {% endif %}
-</body>
-</html>
+{% endblock %}
