--- a/templates/book/book_detail.html
+++ b/templates/book/book_detail.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+
+{% block styles %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/change_account_info.css' %}">
+{% endblock %}
+
+{% block content %}
+<div>
+    {% include 'book/major_navbar.html'%}
+
     <div><button onclick ="location.href='{% url 'book:index' %}'" class="btn_book_delete">이전</button></div>
-    <img src=" {{ object.image.url }}" class="book_detail_image" alt="..." height="280" width="180">
+    <img src=" {{ object.image.url }}" class="book_detail_image" alt="..." height="300" width="300">
       <div class="card-body">
         <h5 class="book_detail_author">{{ object.author }}</h5>
         <hr class="book_detail_first_line">
@@ -41,6 +45,5 @@
         {% endif %}
 
      {% endif %}
-
-</body>
-</html>
+</div>
+{% endblock %}
